--- a/app/src/dashboard/dashboard_v2.tpl.html
+++ b/app/src/dashboard/dashboard_v2.tpl.html
@@ -9,10 +9,10 @@ Funds : <select chosen="{width:'600px'}" multiple ng-model="selectedFunds"
 
     <div class="row">
         <div class="col-xs-3">
-            <statbox title="Projects" stat="stats.projects"></statbox>
+            <statbox title="No. of Projects" stat="stats.projects"></statbox>
         </div>
         <div class="col-xs-3">
-            <statbox title="States" stat="stats.states"></statbox>
+            <statbox title="No. of States" stat="stats.states"></statbox>
         </div>
         <div class="col-xs-3">
             <statbox title="Sanctioned Amount" stat="stats.sanctioned" options=""></statbox>
