--- a/app/src/directives/statbox/statbox.tpl.html
+++ b/app/src/directives/statbox/statbox.tpl.html
@@ -2,6 +2,11 @@
     <div class="title">
         {{title}}
     </div>
-    <div style="display:inline-block" class="stat" count-up end-val="stat" options="options" reanimate-on-click="false" ng-style="statStyle"></div>
+    <div class="row">
+    <div style="display:inline-block" class="stat" count-up end-val="stat" decimals="decimals" options="options"  reanimate-on-click="false" ng-style="statStyle"></div>
+    <div  style="display:inline-block" class="">
+            <span ng-show="title =='Sanctioned Amount'"><h3>Cr</h3></span></div>
+    </div>
+    
     <div class="footer"></div>
 </div>
