FINFLUX-1845:Enhancement depends on the change in MIS system to capture the fields

--- a/app/src/directives/statbox/statbox.tpl.html
+++ b/app/src/directives/statbox/statbox.tpl.html
@@ -5,7 +5,7 @@
     <div class="row">
     <div style="display:inline-block" class="stat" count-up end-val="stat" decimals="decimals" options="options"  reanimate-on-click="false" ng-style="statStyle"></div>
     <div  style="display:inline-block" class="">
-            <span ng-show="title =='Sanctioned Amount'"><h3>Cr</h3></span></div>
+            <span ng-show="title =='Sanctioned Amount' || title =='Amount released by funding agency' || title =='Amount released by NABARD'"><h3>Cr</h3></span></div>
     </div>
     
     <div class="footer"></div>
