changing lable for climatechange

--- a/app/src/dashboard/dashboard_v2.tpl.html
+++ b/app/src/dashboard/dashboard_v2.tpl.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h3 style="color:#1D5434">Climate Change Portfolio of NABARD Projects</h3>
+  <h3 style="color:#1D5434">Climate Change Projects: A Snapshot</h3>
 </div>
 <hr style="border-top:1px solid #e0e0e0;"/>
 Funds : <select chosen="{width:'600px'}" multiple ng-model="selectedFunds"
